--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
 }
+
+.swiper-slide-thumb-active {
+  position: relative;
+}
+
+.swiper-slide-thumb-active::before {
+  content: "";
+  @apply border-2 border-primary;
+  position: absolute;
+  inset: 0;
+  z-index: 1000;
+}
