:heart: Spent 3 hrs to handling this zooming behavior

--- a/src/index.css
+++ b/src/index.css
@@ -60,28 +60,7 @@ body {
   align-items: center;
   opacity: 0.8;
 }
-
-.image-container {
-  position: relative;
-}
-
-.image-container::before {
-  content: "";
-  position: absolute;
-  opacity: 0;
-  visibility: hidden;
-  inset: 0;
-  z-index: 1000;
-  @apply border-2 border-primary;
-}
-
-.image-container:hover .image-container::before {
-  content: "";
-  opacity: 1;
-  visibility: visible;
-}
-
-/* .swiper-slide-thumb-active {
+.swiper-slide-thumb-active {
   position: relative;
 }
 
@@ -91,4 +70,4 @@ body {
   position: absolute;
   inset: 0;
   z-index: 1000;
-} */
+}
