--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,17 @@ body {
   font-weight: 400;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .swiper-button-prev,
 .swiper-button-next {
   position: absolute;
